2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-19  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Russian to ALL_LINGUAS.

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2003-04-19  Hasbullah Bin Pit  <sebol@ikhlas.com>

        * configure.in(ALL_LINGUAS): Added "ms".

2003-04-17  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Added "ca" (Catalan) to ALL_LINGUAS.

2003-04-10  Paul Duffy <dubhthach@frink.nuigalway.ie>

        * configure.ie: Added ga (irish) to ALL_LINGUAS.

2003-04-10  Sanlig Badral  <badral@chinggis.com>

	* configure.in: Added "mn" (mongolian) to ALL_LINGUAS.

2003-03-26  Gil "Dolfin" Osher <dolfin@rpg.org.il>

	* configure.in: Added "he" (Hebrew) to ALL_LINGUAS.

2003-03-13  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-03-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-02-22  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2003-02-16  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added ja into ALL_LINGUAS.

2003-02-15  James Henstridge  <james@daa.com.au>

	* configure.in: update version number.

	* NEWS: update news file for 0.4 release.

2003-02-13  Zbigniew Chyla  <cyba@gnome.pl>

	* configure.in (ALL_LINGUAS): Added pl (Polish).

2003-02-10  Yuriy Syrota  <rasta renome.rovno.ua>

	* configure.in: Added "uk" (Ukrainian) to ALL_LINGUAS.

2003-02-09  Mohammad DAMT  <mdamt@bisnisweb.com>

	* configure.in: Added "id" (Bahasa Indonesia) to ALL_LINGUAS.
